--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
+    "classnames": "^2.2.6",
     "meteor-node-stubs": "^0.3.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
