--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "meteor-node-stubs": "^0.3.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0"
   }
 }
