--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/runtime": "^7.1.5",
     "babel": "^6.23.0",
     "babel-runtime": "^6.26.0",
+    "bcrypt": "^3.0.2",
     "classnames": "^2.2.6",
     "meteor-node-stubs": "^0.3.2",
     "react": "^16.6.3",
